# TelemetryAppNew

./: .gitignore  bootstrap_driver_app_structure.py  bootstrap_engineer_frontend.py  bootstrap_web_server_structure.py  launcher.py  main.py  requirements.txt  setup_architechture.py  start_app.bat
backend/: engine.py  (+2 more)
driver_app/src-tauri/: Cargo.toml  debug-sidecar-state.ndjson  tauri.conf.json
driver_app/src-tauri/src/: commands.rs  config.rs  debug_dump.rs  driver_logging.rs  main.rs  sidecar.rs  state.rs
sidecars/live_telemetry_sidecar/: README.md  build_exe.py  live_telemetry_sidecar.spec  live_telemetry_sidecar_onefile.spec  logging_config.py  pyproject.toml
sidecars/live_telemetry_sidecar/backend/: engine.py
sidecars/live_telemetry_sidecar/src/live_telemetry_sidecar/: __init__.py  __main__.py  engine.py  logging_config.py
sidecars/live_telemetry_sidecar/src/live_telemetry_sidecar/backend/: runtime.py  websocket.py
sidecars/live_telemetry_sidecar/src/live_telemetry_sidecar/telemetry/: adapter_contracts.py  adapter_registry.py  administrator.py  contracts.py  modes.py  telemetry_source_manager.py
sidecars/live_telemetry_sidecar/telemetry/: adapter_contracts.py  administrator.py  contracts.py  telemetry_source_manager.py
sidecars/live_telemetry_sidecar/telemetry/adapters/: mock_sim_adapter.py
sidecars/live_telemetry_sidecar/telemetry/sims/future_sims/: f1_series_receiver.py
sidecars/live_telemetry_sidecar/telemetry/sims/iracing/: iracing_base_parser.py  iracing_reader.py  iracing_receiver.py
sidecars/live_telemetry_sidecar/tests/: __init__.py
(+147 files in other folders)
