[package]
name = "driver_app"
version = "0.1.0"
description = "Local telemetry driver companion shell"
authors = ["Johannes Jakope"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
chrono = "0.4.44"
